publish: Fixed minor issues and login endpoint description
generated from commit 421179bbff9dd3a5eb9cb354c08c457140072449

--- a/index.html
+++ b/index.html
@@ -235,36 +235,38 @@ the resource owner (user), granting you a certain amount of permissions.</p>
 
 <h2 id="login">Login</h2>
 
-<h3 id="http-requests">HTTP Requests</h3>
-
-<p><code class="prettyprint">POST https://api.connctd.io/api/v1/auth/login</code></p>
-
-<blockquote>
-<p>Request body</p>
-</blockquote>
-<pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
-  </span><span class="s2">"Email"</span><span class="p">:</span><span class="w"> </span><span class="s2">"test@example.com"</span><span class="p">,</span><span class="w">
-  </span><span class="s2">"Password"</span><span class="p">:</span><span class="w"> </span><span class="s2">"pikaboo"</span><span class="w">
-</span><span class="p">}</span><span class="w">
-</span></code></pre>
-<h3 id="http-response">HTTP Response</h3>
-
-<p>The response with either have the status code 200 in case of success or 401 in case the 
+<p>The response will either have the status code 200 in case of success or 401 in case the 
 supplied credentials can&rsquo;t be verified. In error cases a default error object is
 returned in the body.</p>
 
 <blockquote>
-<p>Response body</p>
+<p><strong>Request:</strong> <em>Method:</em> POST <em>Url:</em> https://api.connctd.io/api/v1/auth/login <em>Content-Type:</em> application/json <em>Body:</em> see below</p>
 </blockquote>
 <pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
- </span><span class="s2">"Token"</span><span class="p">:</span><span class="w"> </span><span class="s2">"xyz"</span><span class="w">
+  </span><span class="s2">"email"</span><span class="p">:</span><span class="s2">"yourmail"</span><span class="p">,</span><span class="w">
+  </span><span class="s2">"password"</span><span class="p">:</span><span class="s2">"yourpassword"</span><span class="w">
+</span><span class="p">}</span><span class="w">
+</span></code></pre>
+<blockquote>
+<p><strong>Response:</strong> <em>Code:</em> 200 <em>Body:</em> Token und further information. See example below</p>
+</blockquote>
+<pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
+  </span><span class="s2">"access_token"</span><span class="p">:</span><span class="w"> </span><span class="s2">"eyJhbGciOiJFUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2NpZCI6IjJhYWE0ZTQwLTg5ZWEtNDVmNS05NDQ3LWU1YzY4ZjU2N2QyYiIsImV4cCI6MTUwNDEwOTkyNSwiaXNzIjoiYXBpLmNvbm5jdGQuaW8iLCJuYmYiOjE1MDQxMDYzMjUsInN1YiI6InNlYmFzdGlhbi5nYXJuQHBvc3Rlby5kZSJ9.eXyWVlwb8rG70rrxE4_sglCExZwKyT9hqUdVN-InG0CB3_XbeL7PddO79E5wsLa9WfxSZJxWbrBFiwc5lBk2pA"</span><span class="p">,</span><span class="w">
+  </span><span class="s2">"user_id"</span><span class="p">:</span><span class="w"> </span><span class="s2">"546"</span><span class="p">,</span><span class="w">
+  </span><span class="s2">"user_uuid"</span><span class="p">:</span><span class="w"> </span><span class="s2">"4bbb4e40-99ea-43c6-9447-a4c67f563e1c"</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
 <h2 id="logout">Logout</h2>
 
-<h3 id="http-request">HTTP Request</h3>
+<p>Invalidates the access token. You have to specify your access token within <em>Authorization</em> header field.</p>
 
-<p><code class="prettyprint">GET https://api.connctd.io/api/v1/auth/logout</code></p>
+<blockquote>
+<p><strong>Request:</strong> <em>Method:</em> POST <em>Url:</em> https://api.connctd.io/api/v1/auth/logout <em>Content-Type:</em> application/json <em>Body:</em> empty</p>
+</blockquote>
+<pre class="highlight json tab-json"><code></code></pre>
+<blockquote>
+<p><strong>Response:</strong> <em>Code:</em> 200 <em>Body:</em> Empty</p>
+</blockquote>
 
           <h1 id="oauth-2-0">OAuth 2.0</h1>
 
