publish: Shortened access token
generated from commit 0bb6d81c96ae6b1ae6c760e7a194835b762ca7bc

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ returned in the body.</p>
 <p><strong>Response:</strong> <em>Code:</em> 200 <em>Body:</em> Token und further information. See example below</p>
 </blockquote>
 <pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
-  </span><span class="s2">"access_token"</span><span class="p">:</span><span class="w"> </span><span class="s2">"eyJhbGciOiJFUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2NpZCI6IjJhYWE0ZTQwLTg5ZWEtNDVmNS05NDQ3LWU1YzY4ZjU2N2QyYiIsImV4cCI6MTUwNDEwOTkyNSwiaXNzIjoiYXBpLmNvbm5jdGQuaW8iLCJuYmYiOjE1MDQxMDYzMjUsInN1YiI6InNlYmFzdGlhbi5nYXJuQHBvc3Rlby5kZSJ9.eXyWVlwb8rG70rrxE4_sglCExZwKyT9hqUdVN-InG0CB3_XbeL7PddO79E5wsLa9WfxSZJxWbrBFiwc5lBk2pA"</span><span class="p">,</span><span class="w">
+  </span><span class="s2">"access_token"</span><span class="p">:</span><span class="w"> </span><span class="s2">"eyJhbGciOiJFUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2NpZCI6I....."</span><span class="p">,</span><span class="w">
   </span><span class="s2">"user_id"</span><span class="p">:</span><span class="w"> </span><span class="s2">"546"</span><span class="p">,</span><span class="w">
   </span><span class="s2">"user_uuid"</span><span class="p">:</span><span class="w"> </span><span class="s2">"4bbb4e40-99ea-43c6-9447-a4c67f563e1c"</span><span class="w">
 </span><span class="p">}</span><span class="w">
