publish: Added link to imprint of new homepage
generated from commit 933e8056e243e8da124a112beab58335ae18ab6a

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
       </div>
         <ul class="toc-footer">
             <li><a href='https://api.connctd.io/register'>Sign Up for a Developer Key</a></li>
+            <li><a href='https://connctd.com/imprint'>Imprint</a></li>
             <li><a href='https://github.com/tripit/slate'>Documentation Powered by Slate</a></li>
         </ul>
     </div>
